--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 language: python
 python:
 - 2.7
+
 install:
 - pip install -r requirements-dev.txt
 - pip install .
+- pip install coveralls
+
+script:
+- py.test
+- coverage combine test/unit/.coverage
+- pylama .
+
+after_success:
+   - coveralls
+   - if [ $TRAVIS_TAG ]; then curl -X POST https://readthedocs.org/build/napalm; fi
+
 deploy:
   provider: pypi
   user: dbarroso
@@ -12,7 +24,3 @@ deploy:
   on:
     tags: true
     branch: master
-script:
-- pylama .
-- cd test/unit
-- cd ../..
