--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [pylama]
 linters = mccabe,pep8,pyflakes
 ignore = D203,C901
+skip = build/*,.tox/*
 
 [pylama:pep8]
 max_line_length = 100
 
 [tool:pytest]
-addopts = --cov=./ -vs
+addopts = --cov=napalm_ibm --cov-report term-missing -vs --pylama
 json_report = report.json
 jsonapi = true
 
